# lab4

./: CMakeLists.txt  List.h  Timetable.cpp  Timetable.h  Unit_tests.cpp  input.txt  main.cpp
test_input/: 1.txt  2.txt  3.txt
